# module/customer/delivery/http/http.go
@@ -2,6 +2,7 @@ package http
 
 import (
 	"crms/module/customer"
+	"fmt"
 	"github.com/gin-gonic/gin"
 )
 
@@ -14,10 +15,12 @@ func NewCustomerHandler(e *gin.Engine, ser customer.Service) {
 		ser: ser,
 	}
 	e.GET("/api/customerList", handler.GetCustomerList)
+	e.POST("/api/customer", handler.GetCustomer)
 }
 
 // GetCustomerList @Summary GetCustomerList
 // @Description Get all Customer
+// @Accept json
 // @Tags Customer
 // @Produce application/json
 // @Success 200 {object} model.Customer
@@ -32,4 +35,32 @@ func (u *CustomerHandler) GetCustomerList(c *gin.Context) {
 		return
 	}
 	c.JSON(200, customerList)
+}
+
+// GetCustomer @Summary GetCustomer
+// @Description Get Customer by ID
+// @Tags Customer
+// @Produce application/json
+// @Param ID formData string true "Customer ID"
+// @Success 200 {object} model.Customer
+// @Failure 500 {string} string "{"Message": err.Error()}"
+// @Router /customer [post]
+func (u *CustomerHandler) GetCustomer(c *gin.Context) {
+	ID := c.PostForm("ID")
+	fmt.Println(ID)
+	customerData, err := u.ser.GetCustomer(ID)
+	if err != nil {
+		if err.Error() == "error CRMS : There is no this customer" {
+			c.JSON(210, gin.H{
+				"Message": err.Error(),
+			})
+			return
+		} else {
+			c.JSON(500, gin.H{
+				"Message": err.Error(),
+			})
+			return
+		}
+	}
+	c.JSON(200, customerData)
 }
